--- a/style.css
+++ b/style.css
@@ -45,3 +45,56 @@ form button:hover {
   color: white;
   background-color: #0066b2;
 }
+
+.todo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.todo-list {
+  min-width: 30%;
+  list-style: none;
+}
+
+.todo-div {
+  margin: 0.5rem;
+  background-color: white;
+  color: black;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.todo-item {
+  flex: 1;
+}
+
+.trash-button,
+.complete-button {
+  color: white;
+  border: none;
+  padding: 1rem;
+  cursor: pointer;
+  font-size: 1rem;
+}
+.complete-button {
+  background-color: rgb(20, 68, 20);
+}
+.complete-button:hover {
+  background-color: rgb(39, 144, 39);
+}
+
+.trash-button {
+  border-left: 1px rgba(75, 173, 234, 0.589) solid;
+  background-color: rgb(122, 42, 42);
+}
+
+.trash-button:hover {
+  background-color: rgb(211, 10, 10);
+}
+
+.todo-item {
+  padding: 0 0.5rem;
+}
