--- a/style.css
+++ b/style.css
@@ -164,3 +164,78 @@ select {
   color: #0066b2;
   transform: rotate(90deg);
 }
+
+@media screen and (max-width: 768px) {
+  body {
+    font-size: 14px;
+    text-align: center;
+  }
+
+  header {
+    font-size: 1rem;
+  }
+
+  form {
+    /* flex-direction: column; */
+    align-items: center;
+    margin-left: 1rem;
+  }
+
+  form input {
+    width: 50%;
+    height: 3rem;
+    font-size: 1rem;
+    padding: 0.5rem;
+  }
+
+  form button {
+    width: 2.1rem;
+    height: 3rem;
+    font-size: 1rem;
+    padding: 0.5rem;
+  }
+
+  .filter-todo {
+    height: 3rem;
+  }
+
+  .todo-list {
+    width: 90%;
+  }
+
+  .todo-div {
+    align-items: center;
+
+    border-radius: 1rem;
+  }
+
+  .todo-item {
+    font-size: 1rem;
+    text-align: center;
+    overflow-x: scroll;
+  }
+
+  .complete-button,
+  .trash-button {
+    display: flex;
+    width: auto;
+    height: 100%;
+    font-size: 1rem;
+    padding: 1.2rem;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .trash-button {
+    border-radius: 0 1rem 1rem 0;
+  }
+
+  .faid-out {
+    transform: translateX(10rem);
+    opacity: 1;
+  }
+  .fall {
+    transform: translateY(8rem) translateX(-20rem) rotateZ(10deg);
+    opacity: 0;
+  }
+}
